Update move mods

--- a/modlist.html
+++ b/modlist.html
@@ -19,7 +19,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-illumination">Project Red - Illumination (by MrTJP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-compat">Project Red - Compat (by MrTJP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/p455w0rds-library">p455w0rd's Library (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/notenoughkeys">NotEnoughKeys (by dmodoomsirius)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/buildcraft-core">BuildCraft|Core (by Covert_Jaguar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/endercore">EnderCore (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumcraft-inventory-scanning">Thaumic Inventory Scanning (Thaumcraft Addon) (by BlayTheNinth)</a></li>
@@ -27,7 +26,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2-stuff">AE2 Stuff (by bdew)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/refinecraft">RefineCraft (by tier940)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/another-one-bites-the-dust">Another One Bites the Dust (by Forge_User_15685180)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fullscreen-windowed-borderless-for-minecraft">Fullscreen Windowed (Borderless) for Minecraft (by hancin)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/waila-harvestability">Waila Harvestability (by squeek502)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/draconic-evolution">Draconic Evolution (by brandon3055)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chisel">Chisel (by tterrag1098)</a></li>
@@ -38,7 +36,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker">CraftTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/floodlights">FloodLights (by Keridos)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumcraft">Thaumcraft (by Azanor13)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extracells2">ExtraCells2 (by Forge_User_54797008)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-cells-2-samlam140330s-fork">ExtraCells2 - SamLam140330's Fork (by SamLam140330)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-tweaks">Inventory Tweaks [1.12 only]  (by JimeoWan)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/controlling">Controlling (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumic-energistics">Thaumic Energistics (by nividica)</a></li>
@@ -62,11 +60,10 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia">Avaritia (by Spiteful_Fox)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gregtech-5-unofficial">GregTech 5 Unofficial (by Forge_User_35950078)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/nei-addons">NEI Addons (by bdew)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/reauth">ReAuth (by TechnicianLP)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/oauth">OAuth (by Sintinium)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/default-options">Default Options (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inpurecore">INpureCore (by _ForgeUser16919252)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2">Applied Energistics 2 (by AlgorithmX2)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ic2-nei-crop-plugin">IC2 Crop-Breeding Plugin (by Speiger)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openmodslib">OpenModsLib (by OpenMods)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openblocks">OpenBlocks (by OpenMods)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritiaddons">Avaritiaddons (by WanionCane)</a></li>
@@ -74,9 +71,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/waila">Waila (by profmobius)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io">Ender IO (by idontwantthisaccount4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/journeymap">JourneyMap (by techbrew)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/notenoughitems">NotEnoughItems (by Chicken_Bones)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/notenoughitems-gtnh">NotEnoughItems Unofficial (by mitchej123)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/codechickencore">CodeChickenCore (by Chicken_Bones)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-utilities">Extra Utilities (by Forge_User_06804776)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/netherportalfix">NetherPortalFix (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/buildcraft">Buildcraft (by Covert_Jaguar)</a></li>
 </ul>
