--- a/modlist.html
+++ b/modlist.html
@@ -19,7 +19,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-illumination">Project Red - Illumination (by MrTJP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-compat">Project Red - Compat (by MrTJP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/p455w0rds-library">p455w0rd's Library (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/buildcraft-core">BuildCraft|Core (by Covert_Jaguar)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/buildcraft">BuildCraft (by Covert_Jaguar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/endercore">EnderCore (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumcraft-inventory-scanning">Thaumic Inventory Scanning (Thaumcraft Addon) (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wanionlib">WanionLib (by WanionCane)</a></li>
@@ -75,4 +75,5 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/codechickencore">CodeChickenCore (by Chicken_Bones)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-utilities">Extra Utilities (by Forge_User_06804776)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/netherportalfix">NetherPortalFix (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/jadedlibs">JadedLibs (by Tecrogue)</a></li>
 </ul>
