--- a/modlist.html
+++ b/modlist.html
@@ -73,4 +73,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-utilities">Extra Utilities (by Forge_User_06804776)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/netherportalfix">NetherPortalFix (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jadedlibs">JadedLibs (by Tecrogue)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/notenoughitems-gtnh">NotEnoughItems Unofficial 1.7.10 (by mitchej123)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/codechickencore-unofficial">CodeChickenCore Unofficial 1.7.10 (by mitchej123)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/codechickenlib-unofficial">CodeChickenLib Unofficial 1.7.10 (by mitchej123)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/forge-multi-part">Forge Multi Part (by Chicken_Bones)</a></li>
 </ul>
